--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <script src="/assets/js/lib/jquery-3.3.1.min.js"></script>
-	<script src="/assets/js/lib/myscript.js"></script>
+  <script src="assets/js/lib/jquery-3.3.1.min.js"></script>
+	<script src="assets/js/lib/myscript.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/fontAwesome.css">
@@ -60,7 +60,7 @@
       </div>
     </li>
 
-    <li class="card card--open">
+    <li class="card">
       <div class="card__highlight">
         <img class="card__img" src="./assets/images/squared/05.jpg" alt="">
       </div>
